--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "bank-kata.js",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "author": "Nacho García <lupus.zgz@gmail.com>",
+  "license": "MIT",
   "scripts": {
-    "test": "mocha --require test/helper.js $(test -name '*.js')"
+    "test": "mocha --require test/helper.js $(test '*.js')"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "chai": "^4.1.0",
-    "mocha": "^3.4.2",
-    "sinon": "^2.3.8",
-    "sinon-chai": "^2.11.0",
+    "chai": "^4.1.2",
+    "mocha": "^3.5.3",
+    "sinon": "^3.2.1",
+    "sinon-chai": "^2.13.0",
     "sinon-chai-in-order": "^0.1.0",
     "test-console": "^1.0.0",
     "timekeeper": "^2.0.0"
