--- a/package.json
+++ b/package.json
@@ -5,15 +5,12 @@
   "author": "Nacho García <lupus.zgz@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "mocha --require test/helper.js $(test '*.js')"
+    "test": "jest",
+    "lint": "standard --env jest"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^3.5.3",
-    "sinon": "^3.2.1",
-    "sinon-chai": "^2.13.0",
-    "sinon-chai-in-order": "^0.1.0",
-    "test-console": "^1.0.0",
+    "jest": "^21.0.2",
+    "standard": "^10.0.3",
     "timekeeper": "^2.0.0"
   }
 }
